fix: address truncation, ResponsiveAddress, AddressList

--- a/src/components/common/AddressList/AddressList.module.scss
+++ b/src/components/common/AddressList/AddressList.module.scss
@@ -56,9 +56,6 @@
                     overflow: hidden;
                     white-space: nowrap;
                     text-overflow: ellipsis;
-                }
-
-                .label {
                     cursor: pointer;
                     font-size: .75rem;
                     font-weight: 500;
