--- a/src/components/common/ResponsiveAddress/ResponsiveAddress.module.scss
+++ b/src/components/common/ResponsiveAddress/ResponsiveAddress.module.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
   margin: 0;
+	width: 100%;
 
 	.firstPart {
 		white-space: nowrap;
